<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:background="@android:color/transparent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_info"
        android:id="@+id/welcome_text"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        android:textColor="@color/dark"
        android:textSize="18sp"
        android:layout_margin="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_time_info"
        android:id="@+id/total_text"
        android:textColor="@color/dark"
        android:textSize="20sp"
        android:layout_below="@+id/welcome_text"
        android:layout_marginTop="40dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/statistic_hours"
            android:textSize="36sp"
            android:text="@string/zero_info"
            android:layout_marginRight="15dp"
            android:textColor="@color/highlight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_hours"
            android:textSize="22sp"
            android:text="@string/hours"
            android:layout_marginRight="15dp"
            android:textColor="@color/highlight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/statistic_minutes"
            android:textSize="36sp"
            android:text="@string/zero_info"
            android:layout_marginRight="15dp"
            android:textColor="@color/highlight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/text_minutes"
            android:textSize="22sp"
            android:text="@string/minutes"
            android:textColor="@color/highlight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </LinearLayout>

</LinearLayout>